--- a/CoreUtil/resources/config/Hunger/Consumables/VanillaExtended.yml
+++ b/CoreUtil/resources/config/Hunger/Consumables/VanillaExtended.yml
@@ -3,8 +3,8 @@ Default:
     categories: fungi
   egg:
     categories: protein
-  milk_bucket:
-    categories: dairy
+  pumpkin:
+    categories: berries
   red_mushroom:
     categories: fungi
   sugar:
