--- a/CoreUtil/resources/config/ReflectionMappings.yml
+++ b/CoreUtil/resources/config/ReflectionMappings.yml
@@ -17,9 +17,14 @@ v1_12_R1:
   Entity:
     class: Entity
     method:
+      getCraftHandle: getBukkitEntity
       getBoundingBox: getBoundingBox
       save: save
       load: f
+    field:
+      posX: locX
+      posY: locY
+      posZ: locZ
   ItemStack:
     class: ItemStack
     method:
@@ -31,6 +36,7 @@ v1_12_R1:
     method:
       getBlockPos: a
     field:
+      entity: entity
       pos: pos
   NBTBase:
     class: NBTBase
@@ -134,9 +140,14 @@ v1_11_R1:
   Entity:
     class: Entity
     method:
+      getCraftHandle: getBukkitEntity
       getBoundingBox: getBoundingBox
       save: e
       load: f
+    field:
+      posX: locX
+      posY: locY
+      posZ: locZ
   ItemStack:
     class: ItemStack
     method:
@@ -148,6 +159,7 @@ v1_11_R1:
     method:
       getBlockPos: a
     field:
+      entity: entity
       pos: pos
   NBTBase:
     class: NBTBase
@@ -251,9 +263,14 @@ default:
   Entity:
     class: Entity
     method:
+      getCraftHandle: getBukkitEntity
       getBoundingBox: getBoundingBox
       save: save
       load: load
+    field:
+      posX: locX
+      posY: locY
+      posZ: locZ
   ItemStack:
     class: ItemStack
     method:
@@ -265,6 +282,7 @@ default:
     method:
       getBlockPos: getBlockPos
     field:
+      entity: entity
       pos: pos
   NBTBase:
     class: NBTBase
