--- a/CoreUtil/resources/config/Hunger/Groups/Default.yml
+++ b/CoreUtil/resources/config/Hunger/Groups/Default.yml
@@ -9,16 +9,16 @@ Message:
 
 # Sounds that are played for various events
 Sound:
-  chew:               # The sound that plays whenever the player chews on something
+  chew:              # The sound that plays whenever the player chews on something
     enabled: true
     sound:   entity_parrot_eat
     volume:  1.0
     pitch:   0.55
   eat:               # The sound that plays whenever the player swallows something
     enabled: true
-    sound:   entity_llama_eat
-    volume:  1.0
-    pitch:   1.0
+    sound:   entity_horse_eat
+    volume:  0.5
+    pitch:   0.9
 
 # Base amount of food consumed by players; the player will have consumed a full
 # hunger bar when the specified amount of time has elapsed while in that state
